Fix subheading spacing

--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,9 @@ table {
   background-color: #b489ff;
 }
 
+.date{
+  margin-top: 0%;
+}
 .center-text{
   text-align: center;
 }
